--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,15 @@ version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = ">=3.9,<4.0"
 scikit-learn = "1.5.1"
 pandas = "2.2.2"
 jupyterlab = "4.2.3"
+xgboost = "1.6.2"
+ipykernel = "^6.29.5"
 
 
 [build-system]
